# factorio-blueprints

./: factorio-blueprints.cabal  stack.yaml
app/: Main.hs
data/: 44balancer.bp  extreme-module-factory.bp  large-base.bp  test.bp
src/: JsonBlueprint.hs
